--- a/mainwindow.fxml
+++ b/mainwindow.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane fx:id="mainBorderPane" fx:controller="com.timbuchalka.todolist.Controller"
+<BorderPane fx:id="mainBorderPane" fx:controller="todolist.Controller"
             xmlns:fx="http://javafx.com/fxml">
     <top>
         <VBox>
