--- a/todoItemDialog.fxml
+++ b/todoItemDialog.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.DatePicker?>
-<DialogPane fx:controller="com.timbuchalka.todolist.DialogController"
+<DialogPane fx:controller="todolist.DialogController"
             xmlns:fx="http://javafx.com/fxml">
     <headerText>
         We could put instructions here
